bug: Page was visible🤮

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+* {
+  opacity: 0 !important;
+}
+
 a {
   color: #081944;
 }
